COMMONSSITE-82 Avoid repeated collapsed.gif
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/commons-skin/trunk@1676562 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/css/site.css
+++ b/src/main/resources/css/site.css
@@ -7,7 +7,7 @@ div.clear hr { display: none; }
 --------------------------------- */
 
 a.externalLink[href^="http"] {
-    background: none;
+    background-image: none;
 }
 
 #publishDate, #projectVersion, .divider {
